fixed overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,8 +2,6 @@
   margin-left: auto;
   margin-right: auto;
   max-width: 1400px;
-  /*padding: 0 2em; */
-  --border-radius: 12px;
 
 
   --darkest: #211B69;
@@ -19,7 +17,7 @@
 
 html,
 body {
- 
+  overflow-x: hidden;
   font-family: var(--font-inter);
 }
 
