--- a/src/app/styles/HeroSection.module.css
+++ b/src/app/styles/HeroSection.module.css
@@ -15,7 +15,7 @@
 .pothos {
     position: absolute;
     left: 0;
-    bottom: -10px;
+    bottom: 0;
 }
 
 .arrow {
