--- a/src/app/styles/Projects.module.css
+++ b/src/app/styles/Projects.module.css
@@ -105,7 +105,7 @@
 
 @media only screen and (max-width: 1029px) {
     .gridCont {
-        margin: 0 2em 2em 2px;
+        margin: 0 2em 2em 2em;
     }
 
     .projectLinkCont {
@@ -127,6 +127,7 @@
         top: 25px;
         left: 25px;
         margin-bottom: 3em;
+        width: 250px;
     }
     
     .projectImg::after {
